2013-05-14 Borut Razem <borut.razem AT gmail.com>
	* tools/device-help.pl: take the svn revision number from the gputils
	  soruce directory instead from the repository root

2013-03-08 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-manager.pl: bugfix

2013-03-04 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: Synchronization with the modified gpprocessor.c.

2013-03-04 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-manager.pl: Synchronization with the modified gpprocessor.c.

2012-12-16 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: I changed the URL of this script in all generated page.
	* tools/device-help.pl,
	  tools/device-manager.pl: I changed the non-ASCII characters in my name.

2012-12-11 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: Synchronization with the modified gpprocessor.c.

2012-12-02 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-manager.pl: I changed the copyright.

2012-12-01 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-manager.pl: Synchronization with the modified gpprocessor.c.

2012-10-14 Molnar Karoly <molnarkaroly@users.sf.net>
        * tools/device-help.pl: The footer of each page included
          the creation date.

2012-10-06 Molnar Karoly <molnarkaroly@users.sf.net>
        * tools/device-help.pl: New feature in the "Configuration Bits" tabs.
          The "CONFIGx" label thereafter shows the mask also.

2012-10-06 Molnar Karoly <molnarkaroly@users.sf.net>
        * tools/device-help.pl: Correction of a minor bug in
          the read_all_informations() function. If one of
          in field had a '<' or '>' characters, incorrectly
          recognized the borders of fields.

2012-10-03 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-manager.pl: New command line option: --list-support-differences

2012-09-25 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-manager.pl: Code cleaning.
